Deployments/Nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-nodeport
spec:
  type: NodePort
  selector:
    app: k8s-demo
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
