Deployments/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-clusterip
spec:
  selector:
    app: k8s-demo
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
