Deployments/ingress-demo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-ingress-svc
spec:
  selector:
    app: k8s-demo
  ports:
  - port: 80
    targetPort: 3000
